--- a/deployment/Jenkinsfile
+++ b/deployment/Jenkinsfile
@@ -37,14 +37,14 @@ podTemplate(
         stage('Code Analysis & Quality Gate') {
             container('node') {
                 sh "npm install"
-                sh "npm test -- --coverage --passWithNoTests"   //test code 없어도 통과되게 함  
+                sh "npm test -- --coverage --passWithNoTests"
             }
             
             container('sonar-scanner') {
                 withSonarQubeEnv('SonarQube') {
                     sh """
                         ${sonarScannerHome}/bin/sonar-scanner \
-                        -Dsonar.projectKey=lifesub-web \
+                        -Dsonar.projectKey=${props.root_project}-${props.service_name}-${props.teamid} \
                         -Dsonar.sources=src \
                         -Dsonar.tests=src \
                         -Dsonar.test.inclusions=src/**/*.test.js,src/**/*.test.jsx \
@@ -66,7 +66,7 @@ podTemplate(
                 withCredentials([azureServicePrincipal('azure-credentials')]) {
                     sh """
                         az login --service-principal -u \$AZURE_CLIENT_ID -p \$AZURE_CLIENT_SECRET -t \$AZURE_TENANT_ID
-                        az aks get-credentials --resource-group ictcoe-edu --name ${props.teamid}-aks --overwrite-existing
+                        az aks get-credentials --resource-group rg-digitalgarage-02 --name aks-digitalgarage-02 --overwrite-existing
                         kubectl create namespace ${namespace} --dry-run=client -o yaml | kubectl apply -f -
                     """
                 }
@@ -80,19 +80,19 @@ podTemplate(
                     usernameVariable: 'USERNAME',
                     passwordVariable: 'PASSWORD'
                 )]) {
-                    def imagePath = "${props.registry}/${props.image_org}/lifesub-web:${imageTag}"
+                    def imagePath = "${props.registry}/${props.image_org}/${props.service_name}:${imageTag}"
                     
                     sh """
                         podman login ${props.registry} --username \$USERNAME --password \$PASSWORD
 
                         podman build \
                             --build-arg PROJECT_FOLDER="." \
-                            --build-arg REACT_APP_MEMBER_URL="${props.react_app_member_url}" \
-                            --build-arg REACT_APP_MYSUB_URL="${props.react_app_mysub_url}" \
-                            --build-arg REACT_APP_RECOMMEND_URL="${props.react_app_recommend_url}" \
-                            --build-arg BUILD_FOLDER="deployment" \
+                            --build-arg BUILD_FOLDER="deployment/container" \
                             --build-arg EXPORT_PORT="${props.export_port}" \
-                            -f deployment/Dockerfile-lifesub-web \
+                            --build-arg REACT_APP_MEMBER_URL="http://${props.ingress_host}/api/auth" \
+                            --build-arg REACT_APP_MYSUB_URL="http://${props.ingress_host}/api/mysub" \
+                            --build-arg REACT_APP_RECOMMEND_URL="http://${props.ingress_host}/api/recommend" \
+                            -f deployment/container/Dockerfile-lifesub-web \
                             -t ${imagePath} .
                         
                         podman push ${imagePath}
@@ -105,16 +105,20 @@ podTemplate(
             container('envsubst') {
                 sh """
                     export namespace=${namespace}
-                    export lifesub_web_image_path=${props.registry}/${props.image_org}/lifesub-web:${imageTag}
+                    export service_name=${props.service_name}
+                    export image_path=${props.registry}/${props.image_org}/${props.service_name}:${imageTag}
                     export replicas=${props.replicas}
                     export export_port=${props.export_port}
+                    export ingress_host=${props.ingress_host}
                     export resources_requests_cpu=${props.resources_requests_cpu}
                     export resources_requests_memory=${props.resources_requests_memory}
                     export resources_limits_cpu=${props.resources_limits_cpu}
                     export resources_limits_memory=${props.resources_limits_memory}
                     
                     envsubst < deployment/${manifest}.template > deployment/${manifest}
+                    echo "=== Generated Manifest ==="
                     cat deployment/${manifest}
+                    echo "=========================="
                 """
             }
 
@@ -123,13 +127,20 @@ podTemplate(
                     kubectl apply -f deployment/${manifest}
                     
                     echo "Waiting for deployment to be ready..."
-                    kubectl -n ${namespace} wait --for=condition=available deployment/lifesub-web --timeout=300s
+                    kubectl -n ${namespace} wait --for=condition=available deployment/${props.service_name} --timeout=300s
                     
                     echo "Waiting for service external IP..."
-                    while [[ -z \$(kubectl -n ${namespace} get svc lifesub-web -o jsonpath='{.status.loadBalancer.ingress[0].ip}') ]]; do
-                        sleep 5
+                    while [[ -z \$(kubectl -n ${namespace} get svc ${props.service_name}-service -o jsonpath='{.status.loadBalancer.ingress[0].ip}') ]]; do
+                        echo "Waiting for External IP assignment..."
+                        sleep 10
                     done
-                    echo "Service external IP: \$(kubectl -n ${namespace} get svc lifesub-web -o jsonpath='{.status.loadBalancer.ingress[0].ip}')"
+                    
+                    EXTERNAL_IP=\$(kubectl -n ${namespace} get svc ${props.service_name}-service -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+                    echo ""
+                    echo "🎉 Deployment completed successfully!"
+                    echo "📱 Frontend Service External IP: \$EXTERNAL_IP"
+                    echo "🌐 Access URL: http://\$EXTERNAL_IP"
+                    echo ""
                 """
             }
         }
